[gd_scene load_steps=2 format=3 uid="uid://4adtscucoph8"]

[ext_resource type="Script" uid="uid://dypmernqghw3s" path="res://scripts/options.gd" id="1_c2u1v"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c2u1v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
offset_left = 0.399994
offset_top = 0.399994
offset_right = 0.600037
offset_bottom = 108.6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="MuteCheck" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Mute All"

[node name="FullscreenCheck" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Back"

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Reset to Defaults"

[node name="ControlsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Controls"
horizontal_alignment = 1

[node name="ControlsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MoveLeftHBox" type="HBoxContainer" parent="Panel/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="MoveLeftLabel" type="Label" parent="Panel/VBoxContainer/ControlsContainer/MoveLeftHBox"]
layout_mode = 2
text = "Move Left"

[node name="MoveLeftButton" type="Button" parent="Panel/VBoxContainer/ControlsContainer/MoveLeftHBox"]
layout_mode = 2
text = "A"

[node name="MoveRightHBox" type="HBoxContainer" parent="Panel/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="MoveRightLabel" type="Label" parent="Panel/VBoxContainer/ControlsContainer/MoveRightHBox"]
layout_mode = 2
text = "Move Right"

[node name="MoveRightButton" type="Button" parent="Panel/VBoxContainer/ControlsContainer/MoveRightHBox"]
layout_mode = 2
text = "D"

[node name="JumpHBox" type="HBoxContainer" parent="Panel/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="JumpLabel" type="Label" parent="Panel/VBoxContainer/ControlsContainer/JumpHBox"]
layout_mode = 2
text = "Jump"

[node name="JumpButton" type="Button" parent="Panel/VBoxContainer/ControlsContainer/JumpHBox"]
layout_mode = 2
text = "Space"

[node name="AttackHBox" type="HBoxContainer" parent="Panel/VBoxContainer/ControlsContainer"]
layout_mode = 2

[node name="AttackLabel" type="Label" parent="Panel/VBoxContainer/ControlsContainer/AttackHBox"]
layout_mode = 2
text = "Attack"

[node name="AttackButton" type="Button" parent="Panel/VBoxContainer/ControlsContainer/AttackHBox"]
layout_mode = 2
text = "E"

[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
